--- a/plonetheme/teamraum/resources/css/gever/partials/_form.scss
+++ b/plonetheme/teamraum/resources/css/gever/partials/_form.scss
@@ -104,7 +104,7 @@ input[type='checkbox']:disabled ~ label > span {
 #form-widgets-IDocumentMetadata-description,
 #form-widgets-IDossier-comments,
 #form-widgets-other_participants {
-  height: 90px;
+  min-height: 90px;
 }
 
 body.portaltype-opengever-meeting-committee.template-edit {
